Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
 <header class="main-header no-cover">
     <nav class="main-nav overlay clearfix">
-        
+        <a class="blog-logo" href="https://dksw3.github.io/danielklier"><img src="images/logo.png" alt="Blog Logo" /></a>
         <!-- <a class="subscribe-button icon-feed" href="https://dksw3.github.io/danielklier/rss/">Subscribe</a> -->
     </nav>
     <div class="vertical">
